--- a/media/css/base.css
+++ b/media/css/base.css
@@ -335,7 +335,7 @@ h1 {
   font-size: 24px;
   font-weight: bold;
   margin: 0;
-  padding: 2% 0 2% 5%;
+  padding: 2% 0 14% 5%;
   position: relative;
   text-align: center; }
   h1 .heading {
@@ -346,6 +346,35 @@ h1 {
     text-align: center; }
     h1 .heading p {
       text-transform: uppercase; }
+  h1 menu {
+    bottom: 5%;
+    font-size: 14px;
+    font-weight: normal;
+    display: inline-block;
+    left: 0;
+    margin: 0 auto;
+    margin-bottom: -10px;
+    padding-left: 0;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    width: 100%; }
+    h1 menu li {
+      -webkit-box-shadow: inset 0 1px 1px rgba(10, 10, 10, 0.1);
+      -moz-box-shadow: inset 0 1px 1px rgba(10, 10, 10, 0.1);
+      -ms-box-shadow: inset 0 1px 1px rgba(10, 10, 10, 0.1);
+      -o-box-shadow: inset 0 1px 1px rgba(10, 10, 10, 0.1);
+      box-shadow: inset 0 1px 1px rgba(10, 10, 10, 0.1);
+      cursor: pointer;
+      display: inline;
+      float: left;
+      list-decoration: none;
+      padding: 10px 0;
+      width: 25%; }
+      h1 menu li.east2013, h1 menu li.east2014 {
+        background: red; }
+      h1 menu li.west2013, h1 menu li.west2014 {
+        background: blue; }
 
 .sound {
   -webkit-box-shadow: inset 0 1px 1px rgba(10, 10, 10, 0.1);
