--- a/media/css/base.scss
+++ b/media/css/base.scss
@@ -10,6 +10,9 @@ $light-text-color: rgb(250, 250, 250);
 $shadow: rgba(10, 10, 10, .1);
 $text-color: #1d1e1f;
 
+$east: red;
+$west: blue;
+
 .c {
     @include clearfix;
 }
@@ -36,7 +39,7 @@ h1 {
     font-size: 24px;
     font-weight: bold;
     margin: 0;
-    padding: 2% 0 2% 5%;
+    padding: 2% 0 14% 5%;
     position: relative;
     text-align: center;
 
@@ -49,6 +52,37 @@ h1 {
 
         p {
             text-transform: uppercase;
+        }
+    }
+    menu {
+        bottom: 5%;
+        font-size: 14px;
+        font-weight: normal;
+        display: inline-block;
+        left: 0;
+        margin: 0 auto;
+        margin-bottom: -10px;
+        padding-left: 0;
+        position: absolute;
+        right: 0;
+        text-align: center;
+        width: 100%;
+
+        li {
+            @include box-shadow(inset 0 1px 1px $shadow);
+            cursor: pointer;
+            display: inline;
+            float: left;
+            list-decoration: none;
+            padding: 10px 0;
+            width: 25%;
+
+            &.east2013, &.east2014 {
+                background: $east;
+            }
+            &.west2013, &.west2014 {
+                background: $west;
+            }
         }
     }
 }
